@@ -41,8 +41,15 @@ dependencies {
     // Lombok
     implementation 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
+    // aws s3
+    implementation 'software.amazon.awssdk:s3:2.20.0'
+    implementation 'software.amazon.awssdk:core:2.20.0'
 }
 
 tasks.named('test') {
     useJUnitPlatform()
+}
+
+test {
+    jvmArgs += ['-XX:+EnableDynamicAgentLoading']
 }
